# BytesParser

./: CHANGELOG.md  README.md  pyproject.toml
bytes_parser/: __init__.py  bitfields.py  composite_frame.py  default_handlers.py  example.py  formatter.py  frame.py  frame_struct.py  row.py  subframe.py
examples/: example.py
