[tool.poetry]
name = "bytes_parser"
version = "0.1.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
