[tool.poetry]
name = "bytes_parser"
version = "1.0.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."bytes_parser/__init__.py"]